# bookmgr

./: Cargo.toml  README.md  t.db
src/: book.rs  create_book.sql  db.rs  error.rs  main.rs  parse_args.rs
