[package]
name = "ebookmgr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap ={version= "3.2.16",features = ["derive"]}
thiserror = "1.0.30"
rusqlite = {version = "0.26.2",features = ["bundled"]}
walkdir = "2.3.2"